<resources>
    <string name="app_name">Test App</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="password_confirmation">Password confirmation</string>
    <string name="submit">Submit</string>
    <string name="users_list">List of users</string>
</resources>
